# cellim-viewer

./: .gitignore  README.md  compose.yml  index.html  package-lock.json  package.json  tsconfig.app.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  demo_faker.py  main.py  openapi.json  pyproject.toml  repomix-output.xml
backend/app/: main.py
backend/app/api/: tags.py
backend/app/api/contracts/: base.py
backend/app/api/dependencies/: core.py
backend/app/api/endpoints/: auth.py  entries.py  files.py  views.py
backend/app/api/v1/: api.py  dependencies.py  dependency.py  deps.py  tags.py
backend/app/celery/: celery_app.py  tasks.py
backend/app/core/: bearer.py  security.py  settings.py
backend/app/crud/: user_crud.py
backend/app/database/: docker-compose.yml  faker_provider.py  models.py  seed.py  session.py  session_manager.py  snapshot_example.json
backend/app/database/models/: __init__.py  base.py  entry.py  entry_model.py  link.py  role_model.py  share_link.py  share_link_model.py  user.py  user_model.py  view.py  view_model.py  volseg_entry_model.py
backend/app/database/seeding/: seed_database.py
backend/app/middleware/: test_auth_middleware.py  test_middleware.py
backend/app/schemas/: __init__.py  entry.py  view.py
backend/app/services/: dependencies.py  entries.py  entry_service.py  share_link_service.py  user_service.py  view_service.py  volseg_service.py
backend/app/services/auth/: user.py
backend/app/services/files/: dependency.py  file_service.py  file_storage.py  local_storage.py  minio.py  minio_storage.py  upload.py  view_storage.py
backend/app/shared/: config.py  settings.py
backend/docker/: docker-compose.yml
backend/docs/: erd.mermaid  openapi.json
backend/scripts/: format.sh
backend/tools/: db_cli.py  openapi.py
backend/tools/db_seeding/: seed_database.py
client/: package.json  (+2 more)
server/: .env.example  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
server/app/: database.py  main.py  seed-data.json  seed.py
server/app/api/: entries.py  views.py
server/app/database/: generate_data.py  models.py  seed.py  seed_data.json  seed_data.sql
server/app/models/: entry.py
server/app/schemas/: entry.py
server/app/shared/: config.py
server/docs/: erd.mermaid
(+275 files in other folders)
