[project]
name = "cellim-viewer-server"
version = "0.0.0"
description = "Server for CELLIM Viewer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]==0.115.11",
    "pydantic[email]>=2.10.6",
    "pydantic-settings==2.8.1",
    "sqlalchemy==2.0.39",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # isort
    "I",
]
