[project]
name = "cellim-viewer-server"
version = "0.0.0"
description = "Server for CELLIM Viewer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "python-multipart>=0.0.20",
    "minio>=7.2.15",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "faker>=37.1.0",
    "typer>=0.15.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # isort
    "I",
]
