[project]
name = "cellim-viewer-server"
version = "0.0.0"
description = "Server for CELLIM Viewer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "minio>=7.2.15",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "faker>=37.1.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "typer>=0.15.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # isort
    "I",
]
