[project]
name = "cellim-viewer-server"
version = "0.0.0"
description = "Server for CELLIM Viewer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "fastapi>=0.115.11",
    "pydantic-settings>=2.8.1",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
